2009-06-19  Joseph Myers  <joseph@codesourcery.com>

	* Makefile.in (html, pdf): New.
	* doc/Makefile.in (html, pdf, porting.pdf, porting.html): New.
	* doc/porting.texi: Fix section structure.

2009-06-17  Michael Eager <eager@eagercon.com>

	* rs6000/Makefile.in: Add xilinx support.
	* rs6000/xil-crt0.s: New crt0 file for powerpc-xilinx-eabi.
	* rs6000/xilinx.ld: New file.
	* rs6000/xilinx440.ld: Ditto.

2009-05-13  Ken Werner  <ken.werner@de.ibm.com>

	* configure.in: Introduce config_libnosys flag which defaults to true.
	* configure: Regenerate.

2009-05-13  Ulrich Weigand  <uweigand@de.ibm.com>

	* spu/crtn.S: Add dummy to ensure nothing gets linked at address 0.
	* spu/crti.S: Remove nop.

2009-05-08  Nick Clifton  <nickc@redhat.com>

	* mn10300/sim.ld: Add missing section names such as .bss.*
	.text.*, etc.  General tidy up.

2009-05-07  Ken Werner  <ken.werner@de.ibm.com>

	* spu/configure.in: Fix multilib support.
	* spu/configure: Regenerate.
	* spu/Makefile.in: Add CFLAGS_FOR_TARGET.

2009-04-29  Anthony Green  <green@moxielogic.com>

	* moxie/moxie-elf-common.ld: Move default stack out to accommodate
	large GCC tests.

2009-04-22  Anthony Green  <green@moxielogic.com>

	* configure.in: Add moxie support.
	* configure: Regenerate.
	* moxie/aclocal.m4, moxie/configure, moxie/configure.in,
	moxie/crt0.S, moxie/fstat.c, moxie/getpid.c, isatty.c,
	moxie/kill.c, moxie/Makefile.in, moxie/moxie-elf-common.ld,
	moxie/print.c, moxie/putnum.c, moxie/qemu.ld, moxie/qemu-time.c,
	moxie/qemu-write.c, moxie/sbrk.c, moxie/sim-close.S, 
	moxie/sim-exit.S,
	moxie/sim-inbyte.c, moxie/sim.ld, moxie/sim-lseek.c,
	moxie/sim-lseek.S, moxie/sim-open.S, moxie/sim-read.S, moxie/sim-time.c,
	moxie/sim-unlink.S, moxie/sim-write.S, moxie/stat.c: New files.

2009-04-22  DJ Delorie  <dj@redhat.com>

	* mep/sim-crt0.S (_start): Fix typo.

2009-04-21  DJ Delorie  <dj@redhat.com>

	* mep/Makefile.in (SCRIPTS): Update to new config.
	* mep/default.ld: New.